# doctree

./: .darglint  .gitignore  README.md  pyproject.toml
docs/: conf.py  index.rst  installation.rst
doctree/: __init__.py  brief_extractor.py  dir_parser.py  main.py  models.py  util.py
doctree/scripts/: __init__.py  main.py
test/: __init__.py  conftest.py  test_brief_extractor.py  test_dir_parser.py  test_me.py
test/vectors/c/: test.cpp  test_tripe_slash.c
test/vectors/html/: test.html  test.xml
test/vectors/python/: test  test.py  test.sh
